opam-version: "2.0"
name:         "eqaf-gas"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://github.com/dinosaure/eqaf-gas"
bug-reports:  "https://github.com/dinosaure/eqaf-gas/issues"
dev-repo:     "git+https://github.com/eqaf-gas/eqaf-gas.git"
doc:          "https://dinosaure.github.io/eqaf-gas/"
license:      "MIT"
synopsis:     "Abstract interpretation of GAS assembler for eqaf"
description: """This tool wants to execute GAS assembler produced
by OCaml from the eqaf project. The goal is to fuzz the virtual
machine with random inputs and see how many ticks eqaf needs to
compute results.

Expected results should be constant."""

build: [ "dune" "build" "-p" name "-j" jobs ]
run-test: [ "dune" "runtest" "-p" name "-j" jobs ]

depends: [
  "ocaml"       {>= "4.07.0"}
  "dune"
  "bigstringaf"
  "eqaf"
  "crowbar"
  "menhir"
  "bos"
]
